[package]
name = "db_backup_utility"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7"
mysql_async = "0.28"
mongodb = { version = "2.0", features = ["tokio-runtime"] }
flate2 = "1.0"
aws-sdk-s3 = "0.0.26-alpha"
log = "0.4"
tracing = "0.1"
