[package]
name = "db_backup_utility"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dialoguer = "0.10"  # Para los menús interactivos
serde = { version = "1.0", features = ["derive"] }  # Para serializar/deserializar datos
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite"] }